[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptvault"
version = "1.0.0"
description = "Prompt engineering library and version control system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "PromptVault Team", email = "team@promptvault.io"}
]
keywords = ["prompt", "ai", "llm", "openai", "version-control", "engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
    "uuid>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
postgres = ["psycopg2-binary>=2.9.0"]
mongodb = ["pymongo>=4.0.0"]
redis = ["redis>=5.0.0"]
all = ["promptvault[dev,postgres,mongodb,redis]"]

[project.scripts]
promptvault = "promptvault.cli:main"

[project.urls]
Homepage = "https://github.com/promptvault/promptvault"
Documentation = "https://promptvault.readthedocs.io"
Repository = "https://github.com/promptvault/promptvault"
Issues = "https://github.com/promptvault/promptvault/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=promptvault --cov-report=term-missing"
